--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "start:backend": "cd ./apps/http-backend && bun run start",
+    "start:websocket": "cd ./apps/ws-backend && bun run start",
+    "start:frontend": "cd ./apps/web && bun run start"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
