--- a/.github/workflows/cd_websocket.yml
+++ b/.github/workflows/cd_websocket.yml
@@ -16,7 +16,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: build and push to dockerhub
         uses: docker/build-push-action@v4
@@ -33,5 +33,20 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i ~/ssh_key ubuntu@${{ secrets.VM_HOST }} << 'EOF'
             echo "hello world"
             
+            if ! docker network inspect todo-network >/dev/null 2>&1; then
+              docker network create todo-network
+            fi
+
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/todo-websocket:${{ github.sha }}
+
+            if [ "$(docker ps -a -q -f name=todo-websocket)" ]; then
+              docker rm -f todo-websocket
+            fi
+
+            docker run -d --name todo-websocket --network todo-app-network \
+            -e DATABASE_URL="${{ secrets.DB_URL }}" -p 8081:8081 \
+            ${{ secrets.DOCKERHUB_USERNAME }}/todo-websocket:${{ github.sha }}
+
+            docker image prune --all --force
 
           EOF
