--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,8 +11,9 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
-    "@repo/ui": "*",
     "@repo/database": "*",
+    "@repo/ui": "*",
+    "axios": "^1.12.2",
     "next": "^16.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.1.0"
