--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -43,7 +43,7 @@ jobs:
               docker rm -f todo-backend
             fi
 
-            docker run -d --name todo-backend --network todo-app-network \
+            docker run -d --name todo-backend --network todo-network \
             -e DATABASE_URL="${{ secrets.DB_URL }}" -p 8080:8080 \
             ${{ secrets.DOCKERHUB_USERNAME }}/todo-backend:${{ github.sha }}
 
