--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.4"
   },
   "peerDependencies": {
@@ -16,6 +17,7 @@
   },
   "dependencies": {
     "@repo/database": "*",
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   }
 }
