fix: some minor issues

--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -4,6 +4,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'apps/http-backend/**'
+      - 'packages/**'
+      - '.github/workflows/cd_backend.yml'
+      - 'package.json'
+      - 'turbo.json'
+
 
 jobs:
   deploy_backend:
